------------------------------------------------------
Version 1.7.10 - 1.2.15
------------------------------------------------------
Additions
- Void Filter (deletes items placed into it)

Changes
- Ordering of filters in the alternate GUI.

Bug Fixes
- None
------------------------------------------------------
Version 1.7.10 - 1.2.14
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- Alternate Filter's buttons showed up on the basic filter (Closes #42)
- Basic filter ignoring damage values (when it should keep them into account) (Closes #42)
------------------------------------------------------
Version 1.7.10 - 1.2.13
------------------------------------------------------
Additions
- German localization (Thanks wlhlm!)
- Spanish localization (WIP)
- Swedish localization (WIP)

Changes
- Added compatibility so GraveStone's graves (and maybe others) work (Closes #40)

Bug Fixes
- None
------------------------------------------------------
Version 1.7.10 - 1.2.12
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- Closes #37 (Restocking upgrade duplicating items)
------------------------------------------------------
Version 1.7.10 - 1.2.11
------------------------------------------------------
Additions
- The ability to remove an upgrade by shapelessly crafting the backpack in a crafting grid
    - The upgrade removed is dependent on the slot it is placed into
    - So to remove the 2nd upgrade on the backpack, put it in the second slot in the crafting grid etc.
    - Note that this doesn't remove the old system, you can still craft an upgrade with a backpack that already has it to specifically remove said upgrade

Changes
- None

Bug Fixes
- Crash when crafting a specific combination of alt. gui upgrades
------------------------------------------------------
Version 1.7.10 - 1.2.10
------------------------------------------------------
Additions
- None

Changes